@@ -20,6 +20,7 @@ import io.github.pangju666.commons.lang.utils.RegExUtils;
 import io.github.pangju666.commons.validation.annotation.Number;
 import jakarta.validation.ConstraintValidator;
 import jakarta.validation.ConstraintValidatorContext;
+import org.apache.commons.lang3.StringUtils;
 
 import java.util.Objects;
 import java.util.regex.Pattern;
@@ -31,11 +32,11 @@ import java.util.regex.Pattern;
  * @see Number
  * @since 1.0.0
  */
-public class NumberValidator implements ConstraintValidator<Number, String> {
+public class NumberValidator implements ConstraintValidator<Number, CharSequence> {
 	private static final Pattern PATTERN = RegExUtils.compile(RegExPool.NUMBER, true, true);
 	private static final Pattern POSITIVE_PATTERN = RegExUtils.compile(RegExPool.POSITIVE_NUMBER, true, true);
 	private static final Pattern FLOAT_PATTERN = RegExUtils.compile(RegExPool.FLOAT_NUMBER, true, true);
-	private static final Pattern POSITIVE_FLOAT__PATTERN = RegExUtils.compile(RegExPool.POSITIVE_FLOAT_NUMBER, true, true);
+	private static final Pattern POSITIVE_FLOAT_PATTERN = RegExUtils.compile(RegExPool.POSITIVE_FLOAT_NUMBER, true, true);
 
 	private boolean positive;
 	private boolean decimal;
@@ -47,24 +48,23 @@ public class NumberValidator implements ConstraintValidator<Number, String> {
 	}
 
 	@Override
-	public boolean isValid(String value, ConstraintValidatorContext context) {
+	public boolean isValid(CharSequence value, ConstraintValidatorContext context) {
 		if (Objects.isNull(value)) {
 			return true;
 		}
-		if (value.isBlank()) {
+		if (StringUtils.isBlank(value)) {
 			return false;
 		}
 		if (positive) {
 			if (decimal) {
-				return RegExUtils.matches(POSITIVE_FLOAT__PATTERN, value);
+				return POSITIVE_FLOAT_PATTERN.matcher(value).matches();
 			}
-			return RegExUtils.matches(POSITIVE_PATTERN, value);
+			return POSITIVE_PATTERN.matcher(value).matches();
 		} else {
 			if (decimal) {
-				return RegExUtils.matches(FLOAT_PATTERN, value);
+				return FLOAT_PATTERN.matcher(value).matches();
 			}
-			return RegExUtils.matches(PATTERN, value);
-
+			return PATTERN.matcher(value).matches();
 		}
 	}
 }
